feat: posts CRUD with hexagonal architecture (#2)
- 7 endpoints at /v1/post: POST, PUT, DELETE (single+mass), GET by id/slug/search
- Hexagonal architecture: UseCase NEVER converts/constructs/validates, Output owns brute logic
- Domain-specific mappers: AuthorMapper, TagMapper, ProjectMapper, PostInputMapper, PostOutputMapper
- PostModel/AuthorModel/TagModel/ProjectModel end with Model
- PostStatus enum (DRAFT/PUBLISHED), SortDirection enum
- @Formula for reactionCount (removed ReactionOutput)
- Unified PostRepository.search with EXISTS subquery
- @CurrentAuthor annotation + CurrentAuthorArgumentResolver
- FindOrCreateAuthorUseCase extracted from AuthenticationService
- Entities in domain/, repositories in repository/
- Generic pagination: PaginatedInput/PaginatedOutput models
- BusinessException not ResponseStatusException
- Controller NEVER calls Output directly
- GetById NEVER increments viewCount (dashboard), GetBySlug always increments (public)
- Ownership validation in Controller, not UseCase
- Flyway V1 consolidated (removed V2, status in V1)
- mvn clean compile PASS